--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -108,7 +108,7 @@
       "source": [
         "## **Data Collection** ##\n",
         "\n",
-        "I collected data by using an AWS open dataset, specifically from the New York Taxi Limousine Commision (TLC) Trip Record Data.  These datasets allow us to access many csv files related to our project.  There were many csv files with data regarding NY taxi drivers.  Specifically, the website contained one csv file for every month and for different types of taxis, with over 7,000,000 data entries for most of these files.  For the purposes of this machine learning algorithm, I sampled data from the most recent year during the winter.  The dataset selected, *df*, was from February 2019 for yellow taxi cabs.\n",
+        "I collected data by using an AWS open dataset, specifically from the New York Taxi Limousine Commision (TLC) Trip Record Data.  These datasets allow us to access many csv files related to my project.  There were many csv files with data regarding NY taxi drivers.  Specifically, the website contained one csv file for every month and for different types of taxis, with over 7,000,000 data entries for most of these files.  For the purposes of this machine learning algorithm, I sampled data from the most recent year during the winter.  The dataset selected, *df*, was from February 2019 for yellow taxi cabs.\n",
         "\n",
         "Additionally, data has been collected from [Weather Underground](https://www.wunderground.com/history/monthly/us/ny/new-york-city/KLGA/date/2019-2). This website displays the days of the month of February, and the associated temperatures, wind speed, and precipitation in New York City that correspond with each day. In this notebook, this dataset is called *df2*. \n",
         "\n",
@@ -1535,7 +1535,7 @@
       "source": [
         "## **Data Cleaning** ##\n",
         "\n",
-        "Before visualizing this data again, I must clean it.  Therefore, I must subset the data to remove extreme outliers.  Also, these extreme outliers could affect our data when I perform machine learning, so it is okay to remove these.  Additionally, some of the prices are negative or zero values. I will also take the negative or zero values out of the dataset because I do not understand how prices could be negative."
+        "Before visualizing this data again, I must clean it.  Therefore, I must subset the data to remove extreme outliers.  Also, these extreme outliers could affect the data when I perform machine learning, so it is okay to remove these.  Additionally, some of the prices are negative or zero values. I will also take the negative or zero values out of the dataset because I do not understand how prices could be negative."
       ]
     },
     {
@@ -1827,7 +1827,7 @@
       "source": [
         "## **Data Cleaning II** ##\n",
         "\n",
-        "Looking at the graph above, it appears that there is still a lot of data that does not follow a trend.  For example, there are values with a very low distance with a very high price, and there are values with a high distance with a very low price.  From a logical standpoint, this does not really make sense, as we do not understand how someone travelling 1 mile can pay $500 or someon traveling almost 70 miles doesn't have to pay anython.  Therefore, we must change these extreme outliers.  We do not want these outliers to affect our model later on, so we have selected a new price that seems more logical.  In the first statement, if the distance is less than 10 and the price is greater than 100, we set the price equal to 100. Here, the uncleaned data, df4 is used. "
+        "Looking at the graph above, it appears that there is still a lot of data that does not follow a trend.  For example, there are values with a very low distance with a very high price, and there are values with a high distance with a very low price.  From a logical standpoint, this does not really make sense, as we do not understand how someone travelling 1 mile can pay $500 or someon traveling almost 70 miles doesn't have to pay anython.  Therefore, we must change these extreme outliers.  We do not want these outliers to affect the model later on, so we have selected a new price that seems more logical.  In the first statement, if the distance is less than 10 and the price is greater than 100, we set the price equal to 100. Here, the uncleaned data, df4 is used. "
       ]
     },
     {
@@ -2066,7 +2066,7 @@
         "\n",
         "Interesetingly, passenger count does not seem to correlate with the price.  Therefore, if all other factors were the same, a taxi ride with one passenger would cost the same as 4 passengers.\n",
         "\n",
-        "Temperature and precipitation seem to have a positive relationship with the fare amount, which goes against our predictions.  However, this relationship actually makes sense.  Let's paint a picture.  People ride in taxis to get from place to place.  People who must travel for long distances will use a taxi regardless of temperature and precipitation because this distance is too far for them to walk.  However, people who travel for short distances can either choose to walk or take a taxi.  On a normal, sunny day, a person in Manhattan traveling about ten blocks will likely choose to walk.  However, on a cold or a rainy day, this person may choose to ride a taxi instead.  Many people will choose to do this on a cold or rainy day.  Because of this, cold and rainy days have more people travelling shorter distances, and thus, the fare amount would decrease.  Therefore, the smaller distances people travel on cold and rainy days means that the fare amount would also be lower.  This is why a higher temperature and precipitation correlates with a higher fare amount."
+        "Temperature and precipitation seem to have a positive relationship with the fare amount, which goes against my predictions.  However, this relationship actually makes sense.  Let's paint a picture.  People ride in taxis to get from place to place.  People who must travel for long distances will use a taxi regardless of temperature and precipitation because this distance is too far for them to walk.  However, people who travel for short distances can either choose to walk or take a taxi.  On a normal, sunny day, a person in Manhattan traveling about ten blocks will likely choose to walk.  However, on a cold or a rainy day, this person may choose to ride a taxi instead.  Many people will choose to do this on a cold or rainy day.  Because of this, cold and rainy days have more people travelling shorter distances, and thus, the fare amount would decrease.  Therefore, the smaller distances people travel on cold and rainy days means that the fare amount would also be lower.  This is why a higher temperature and precipitation correlates with a higher fare amount."
       ]
     },
     {
@@ -2306,7 +2306,7 @@
         "colab_type": "text"
       },
       "source": [
-        "After all the packages are imported, I then specify our independent variables and dependent variable. Y represents the total amount paid for the trip while X represents the distance and average temperature for each day. "
+        "After all the packages are imported, I then specify the independent variables and dependent variable. Y represents the total amount paid for the trip while X represents the distance and average temperature for each day. "
       ]
     },
     {
@@ -2330,7 +2330,7 @@
         "colab_type": "text"
       },
       "source": [
-        "I then split the data into a training set and a test set using train_test_split from sklearn. Here, I use 80% of the data as our training data and 20% of the data as our test data."
+        "I then split the data into a training set and a test set using train_test_split from sklearn. Here, I use 80% of the data as the training data and 20% of the data as the test data."
       ]
     },
     {
@@ -2758,7 +2758,7 @@
         "colab_type": "text"
       },
       "source": [
-        "To optimize the model, I chose to run the full model (with important features) and then implement Backward elimination to select the most statistically significant variables to for the label, price.  I decided to use linear regression because our analysis in data visualization revealed linear relationships.  Additionally, the regression output revealed that the features are all statistically significant.  Thus, now I want to see how well our model can predit the fare value using a multiple linear regression. "
+        "To optimize the model, I chose to run the full model (with important features) and then implement Backward elimination to select the most statistically significant variables to for the label, price.  I decided to use linear regression because the analysis in data visualization revealed linear relationships.  Additionally, the regression output revealed that the features are all statistically significant.  Thus, now I want to see how well the model can predit the fare value using a multiple linear regression. "
       ]
     },
     {
@@ -2889,7 +2889,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Here I calculate the new mean squared error and I get a value of about 17.8, slightly less than from the first model.  Our model seems to have improved!"
+        "Here I calculate the new mean squared error and I get a value of about 17.8, slightly less than from the first model.  The model seems to have improved!"
       ]
     },
     {
